--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -18,11 +18,11 @@
                                                            Secure And Scale Your Business
                                                         </h2>
                                                         <p class="lead animated mt-4 mb-5" data-animation-in="fadeInUpBig" data-animation-delay="200">
-                                                            Everpay is an open payments company, focusing on simplifying payments and unifing big commerce under one single secure source.
+                                                            Everpay simplifies payments and unifies big commerce under one single source.
                                                         </p>
                                                            <!-- Form -->
-                <form class="js-validate mb-4 mt-3">
-                  <div class="form-row mb-2">
+                <form class="js-validate">
+                  <div class="form-row justify-content-md-center w-100 mb-5 mt-5">
                     <div class="col-sm-6 col-lg mb-2">
                       <div class="js-form-message">
                         <label class="sr-only" for="signupSrName">Name</label>
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="col-sm-6 col-lg mb-3">
-                      <button type="submit" class="btn btn-white btn-circle btn-outline animated" data-animation-in="fadeInUpBig" data-animation-delay="1000">Get Started</button>
+                      <button type="submit" class="btn btn-white btn-outline animated" data-animation-in="fadeInUpBig" data-animation-delay="1000">Get Started</button>
                     </div>
                   </div>
 
