--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -4,7 +4,7 @@
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 180px;">
+                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 140px;">
                                      <div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;">
                                        <video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;"><source src="../../assets/media/video/broadwaycrew.mp4" type="video/mp4"><source src="../../assets/media/video/broadwaycrew.webm" type="video/webm">
                                       <source src="{{ site.baseurl }}/assets/videos/everpay-intro.ogv" type="video/ogg"></video>
@@ -21,11 +21,11 @@
                                                             Everpay simplifies payments and unifies big commerce under one single source.
                                                         </p>
                                                            <!-- Form -->
-                <form class="js-validate">
-                  <div class="form-row justify-content-md-center w-100 mb-5 mt-5">
-                    <div class="col-sm-6 col-lg mb-2">
+                <form class="js-validate col-md-12 ml-5">
+                  <div class="form-row wd-100 mb-5 mt-5 ml-5 text-center text-lg-center">
+                    <div class="col-sm-5 col-lg mb-2">
                       <div class="js-form-message">
-                        <label class="sr-only" for="signupSrName">Name</label>
+                        <label class="sr-only" for="signupSrName">Your Name</label>
                         <div class="input-group input-group-borderless">
                           <input type="text" class="form-control" name="name" id="signupSrName" placeholder="Name" aria-label="Name" required
                                  data-msg="Name must contain only letters.">
@@ -33,17 +33,7 @@
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-lg mb-2">
-                      <div class="js-form-message">
-                        <label class="sr-only" for="signupSrPhone">Phone</label>
-                        <div class="input-group input-group-borderless">
-                          <input type="tel" class="form-control" name="phone" id="signupSrPhone" placeholder="Phone" aria-label="Phone" required
-                                 data-msg="Phone number must contain only digits.">
-                        </div>
-                      </div>
-                    </div>
-
-                    <div class="col-sm-6 col-lg mb-2">
+                    <div class="col-sm-5 col-lg mb-2">
                       <div class="js-form-message">
                         <label class="sr-only" for="signupSrEmail">Email</label>
                         <div class="input-group input-group-borderless">
@@ -53,7 +43,7 @@
                       </div>
                     </div>
 
-                    <div class="col-sm-6 col-lg mb-3">
+                    <div class="col-sm-2 col-lg mb-3">
                       <button type="submit" class="btn btn-white btn-outline animated" data-animation-in="fadeInUpBig" data-animation-delay="1000">Get Started</button>
                     </div>
                   </div>
