--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -14,15 +14,15 @@
                                             <div class="col px-0 mt-5">
                                                 <div class="row justify-content-md-center w-100 mt-5">
                                                     <div class="col-md-10 text-center text-lg-center align-self-center mt-5">
-                                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated mt-3 mb-3" data-animation-in="fadeInDownBig" data-animation-delay="200">
+                                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 mt-3 mb-3">
                                                            Secure And Scale Your Business
                                                         </h2>
-                                                        <p class="lead animated mt-4 mb-5" data-animation-in="fadeInUpBig" data-animation-delay="200">
+                                                        <p class="lead mt-4 mb-5">
                                                             Everpay simplifies payments and unifies big commerce under one single source.
                                                         </p>
                                                            <!-- Form -->
-                <form class="js-validate col-md-12 ml-5">
-                  <div class="form-row wd-70 mb-2 mt-5 ml-5 text-center text-lg-center">
+                <form class="js-validate text-center text-lg-center align-self-center ml-5 mt-5">
+                  <div class="form-row justify-content-md-center w-70 mb-5 ml-5">
                     <div class="col-sm-5 col-lg mb-2">
                       <div class="js-form-message">
                         <label class="sr-only" for="signupSrName">Your Name</label>
@@ -44,7 +44,7 @@
                     </div>
 
                     <div class="col-sm-2 col-lg mb-3">
-                      <button type="submit" class="btn btn-white btn-outline animated" data-animation-in="fadeInUpBig" data-animation-delay="1000">Get Started</button>
+                      <button type="submit" class="btn btn-white btn-outline">Get Started</button>
                     </div>
                   </div>
 
