--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -18,6 +18,7 @@
                                                            Secure And Scale Your Business
                                                         </h2>
                                                         <p class="lead mt-4 mb-5">
+                                                          Connect with more customers and increase your bottom line with the only commerce platform that connects all major payment processors (in the US), credit, gift and debit cards, Echecks, and popular digital wallets like Apple Pay and Google Pay in a single, seamless integration.
                                                             Everpay simplifies payments and unifies big commerce under one single source.
                                                         </p>
                                                            <!-- Form -->
@@ -49,7 +50,7 @@
                   </div>
 
                   <!-- Checkbox -->
-                  <div class="js-form-message mb-5">
+                  <div class="js-form-message mb-5 ml-5 text-left">
                     <div class="custom-control custom-checkbox text-muted">
                       <input type="checkbox" class="custom-control-input" id="termsCheckbox" name="termsCheckbox" required
                              data-msg="Please accept our Terms and Conditions.">
