--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -4,9 +4,11 @@
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 140px;">
+                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 120px;">
                                      <div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;">
-                                       <video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;"><source src="../../assets/media/video/broadwaycrew.mp4" type="video/mp4"><source src="../../assets/media/video/broadwaycrew.webm" type="video/webm">
+                                       <video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;">
+                                         <source src="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" type="video/mp4">
+                                         <source src="" type="video/webm">
                                       <source src="" type="video/ogg"></video>
                                       </div> 
                                         <span class="mask mask-base-1--style-2 alpha-6"></span>
@@ -15,11 +17,11 @@
                                                 <div class="row justify-content-md-center w-100 mt-5">
                                                     <div class="col-md-10 text-center text-lg-center align-self-center mt-5">
                                                         <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 mt-3 mb-3">
-                                                           Secure And Scale Your Business
+                                                          Scale And Secure Your Business
                                                         </h2>
                                                         <p class="lead mt-4 mb-5">
                                                           Connect with more customers and increase your bottom line with the only commerce platform that connects all major payment processors (in the US), credit, gift and debit cards, Echecks, and popular digital wallets like Apple Pay and Google Pay in a single, seamless integration.
-                                                            Everpay simplifies payments and unifies big commerce under one single source.
+                                                            
                                                         </p>
                                                            <!-- Form -->
                 <form class="js-validate text-center text-lg-center align-self-center ml-5 mt-5">
