--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -4,10 +4,10 @@
                             <div class="swiper-wrapper">
                                 <!-- Slide -->
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 120px;">
+                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="//vimeo.com/167434033" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 120px;">
                                      <div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;">
                                        <video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;">
-                                         <source src="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" type="video/mp4">
+                                         <source src="//vimeo.com/167434033" type="video/mp4">
                                          <source src="" type="video/webm">
                                       <source src="" type="video/ogg"></video>
                                       </div> 
