--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -12,65 +12,69 @@
                                       <source src="" type="video/ogg"></video>
                                       </div> 
                                         <span class="mask mask-base-1--style-2 alpha-6"></span>
-                                        <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
-                                            <div class="col px-0 mt-5">
-                                                <div class="row justify-content-md-center w-100 mt-5">
-                                                    <div class="col-md-10 text-center text-lg-center align-self-center mt-5">
-                                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 mt-3 mb-3">
-                                                          Scale And Secure Your Business
-                                                        </h2>
-                                                        <p class="lead mt-4 mb-5">
-                                                          Connect with more customers and increase your bottom line with the only commerce platform that connects all major payment processors (in the US), credit, gift and debit cards, Echecks, and popular digital wallets like Apple Pay and Google Pay in a single, seamless integration.
-                                                            
-                                                        </p>
-                                                           <!-- Form -->
-                <form class="js-validate text-center text-lg-center align-self-center ml-5 mt-5">
-                  <div class="form-row justify-content-md-center w-70 mb-5 ml-5">
-                    <div class="col-sm-5 col-lg mb-2">
-                      <div class="js-form-message">
-                        <label class="sr-only" for="signupSrName">Your Name</label>
-                        <div class="input-group input-group-borderless">
-                          <input type="text" class="form-control" name="name" id="signupSrName" placeholder="Name" aria-label="Name" required
-                                 data-msg="Name must contain only letters.">
-                        </div>
-                      </div>
-                    </div>
+                 <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
+                                              <!-- Content -->
+<div class="col px-0 mt-5">
+        <div class="row w-100">
+          <div class="col-lg-5">
+<h2 class="heading heading-xl strong-600 text-normal line-height-1_2 mt-3 mb-3">Scale And Secure</h2>
+            <p class="lead mt-4 mb-5">
+             Your Business
+              <span class="text-primary">
+                <strong class="u-text-animation u-text-animation--typing"></strong>
+              </span>
+              <br>
+             Connect with more customers and increase your bottom line with the only commerce platform that connects all major payment processors (in the US), credit, gift and debit cards, Echecks, and popular digital wallets like Apple Pay and Google Pay in a single, seamless integration.
+            </p>
 
-                    <div class="col-sm-5 col-lg mb-2">
-                      <div class="js-form-message">
-                        <label class="sr-only" for="signupSrEmail">Email</label>
-                        <div class="input-group input-group-borderless">
-                          <input type="email" class="form-control" name="email" id="signupSrEmail" placeholder="Email" aria-label="Email" required
-                                 data-msg="Please enter a valid email address.">
-                        </div>
-                      </div>
-                    </div>
+            <div class="d-flex align-items-center flex-wrap">
+              <a class="btn btn-soft-primary btn-wide transition-3d-hover" href="../pages/login-simple.html">Get Started</a>
 
-                    <div class="col-sm-2 col-lg mb-3">
-                      <button type="submit" class="btn btn-white btn-outline">Get Started</button>
-                    </div>
-                  </div>
-
-                  <!-- Checkbox -->
-                  <div class="js-form-message mb-5 ml-5 text-left">
-                    <div class="custom-control custom-checkbox text-muted">
-                      <input type="checkbox" class="custom-control-input" id="termsCheckbox" name="termsCheckbox" required
-                             data-msg="Please accept our Terms and Conditions.">
-                      <label class="custom-control-label text-white" for="termsCheckbox">
-                        <small>
-                          * By clicking "Get Started", I agree to the
-                          <a class="link-white" href="/terms.html">Terms and Conditions</a>
-                        </small>
-                      </label>
-                    </div>
-                  </div>
-                  <!-- End Checkbox -->
-                </form>
-                <!-- End Form -->
-
-                                                    </div>
-                                                </div>
-                                            </div>
+              <!-- Fancybox -->
+              <a class="js-fancybox media align-items-center u-media-player ml-3" href="javascript:;"
+                 data-src="//vimeo.com/167434033"
+                 data-speed="700"
+                 data-animate-in="zoomIn"
+                 data-animate-out="zoomOut"
+                 data-caption="Scale And Secure Your Business">
+                <span class="u-media-player__icon u-media-player__icon--success mr-3">
+                  <span class="fas fa-play u-media-player__icon-inner"></span>
+                </span>
+                <span class="media-body">
+                  Play video
+                </span>
+              </a>
+              <!-- End Fancybox -->
+            </div>
+          </div>
+        </div>
+        <!-- End Content -->
+   <!-- SVG Background -->
+        <div id="SVGMainHero" class="col-lg-9 col-xl-7 svg-preloader d-none d-lg-block position-absolute top-0 right-0 pr-0" style="margin-top: 105.6px;">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 1374.7 1083.6" style="enable-background:new 0 0 1374.7 1083.6;" xml:space="preserve">
+<style type="text/css">
+	.main-hero-0{fill:#377dff;}
+</style>
+<path class="main-hero-0 fill-primary" opacity=".05" d="M285.2,170.1c-94.5,8.6-181.2,57.4-235.9,134.8C-34.7,423.6-54.5,621.5,349,879.8
+	c636.5,407.6,600,9.3,591.9-47.4c-0.8-5.5-1.4-11.1-2-16.6l-34.2-374.1C888.4,262,729.2,129.6,549.4,146L285.2,170.1z"/>
+<g>
+	<defs>
+		<path id="mainHeroBlock1" d="M1374.7,0H687.6l-278,279.7c-150,150.9-148.1,395.3,4.4,543.8l0,0C554.1,960,774.9,968.7,925.4,843.6
+			l449.3-373.4V0z"/>
+	</defs>
+	<clipPath id="mainHeroBlock2">
+		<use xlink:href="#mainHeroBlock1"  style="overflow:visible;"/>
+	</clipPath>
+	<g transform="matrix(1 0 0 1 0 0)" style="clip-path:url(#mainHeroBlock2);">
+		<!-- Apply your (750px width to 750px height) image here -->
+		<image id="SVGMainHeroImg1" style="overflow:visible;" width="750" height="750" xlink:href="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265811/img/850x680/img1.jpg"  transform="matrix(1.4462 0 0 1.4448 290.09 0)"></image>
+	</g>
+</g>
+</svg>
+        </div>
+        <!-- End SVG Background --
+                                           
                                         </div>
                                     </div>
                                 </div>
