--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -16,10 +16,11 @@
                                               <!-- Content -->
 <div class="col px-0 mt-5">
         <div class="row w-100">
+		
           <div class="col-lg-5">
-<h2 class="heading heading-xl strong-600 text-normal line-height-1_2 mt-3 mb-3">Scale And Secure</h2>
+            
+<h2 class="heading heading-xl strong-600 text-normal line-height-1_2 mt-3 mb-3">Scale And Secure Your Business</h2>
             <p class="lead mt-4 mb-5">
-             Your Business
               <span class="text-primary">
                 <strong class="u-text-animation u-text-animation--typing"></strong>
               </span>
@@ -46,8 +47,8 @@
               </a>
               <!-- End Fancybox -->
             </div>
+		  
           </div>
-        </div>
         <!-- End Content -->
    <!-- SVG Background -->
         <div id="SVGMainHero" class="col-lg-9 col-xl-7 svg-preloader d-none d-lg-block position-absolute top-0 right-0 pr-0" style="margin-top: 105.6px;">
@@ -73,7 +74,9 @@
 </g>
 </svg>
         </div>
-        <!-- End SVG Background --
+       
+          </div>
+        <!-- End intro -->
                                            
                                         </div>
                                     </div>
