--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -6,7 +6,7 @@
                                 <div class="swiper-slide" data-swiper-autoplay="8000">
                                     <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 120px;">
                                      <div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;">
-                                       <video autoplay="" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;">
+                                       <video autoplay="true" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;">
                                          <source src="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" type="video/mp4">
                                          <source src="" type="video/webm">
                                       <source src="" type="video/ogg"></video>
@@ -24,7 +24,6 @@
               <span class="text-primary">
                 <strong class="u-text-animation u-text-animation--typing"></strong>
               </span>
-              <br>
              Connect with more customers and increase your bottom line with the only commerce platform that connects all major payment processors (in the US), credit, gift and debit cards, Echecks, and popular digital wallets like Apple Pay and Google Pay in a single, seamless integration.
             </p>
 
@@ -51,28 +50,8 @@
           </div>
         <!-- End Content -->
    <!-- SVG Background -->
-        <div id="SVGMainHero" class="col-lg-9 col-xl-7 svg-preloader d-none d-lg-block position-absolute top-0 right-0 pr-0" style="margin-top: 105.6px;">
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 1374.7 1083.6" style="enable-background:new 0 0 1374.7 1083.6;" xml:space="preserve">
-<style type="text/css">
-	.main-hero-0{fill:#377dff;}
-</style>
-<path class="main-hero-0 fill-primary" opacity=".05" d="M285.2,170.1c-94.5,8.6-181.2,57.4-235.9,134.8C-34.7,423.6-54.5,621.5,349,879.8
-	c636.5,407.6,600,9.3,591.9-47.4c-0.8-5.5-1.4-11.1-2-16.6l-34.2-374.1C888.4,262,729.2,129.6,549.4,146L285.2,170.1z"/>
-<g>
-	<defs>
-		<path id="mainHeroBlock1" d="M1374.7,0H687.6l-278,279.7c-150,150.9-148.1,395.3,4.4,543.8l0,0C554.1,960,774.9,968.7,925.4,843.6
-			l449.3-373.4V0z"/>
-	</defs>
-	<clipPath id="mainHeroBlock2">
-		<use xlink:href="#mainHeroBlock1"  style="overflow:visible;"/>
-	</clipPath>
-	<g transform="matrix(1 0 0 1 0 0)" style="clip-path:url(#mainHeroBlock2);">
-		<!-- Apply your (750px width to 750px height) image here -->
-		<image id="SVGMainHeroImg1" style="overflow:visible;" width="750" height="750" xlink:href="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265811/img/850x680/img1.jpg"  transform="matrix(1.4462 0 0 1.4448 290.09 0)"></image>
-	</g>
-</g>
-</svg>
+        <div class="col-lg-9 col-xl-7 d-none d-lg-block position-absolute top-0 right-0 pr-0" style="margin-top: 75.6px;">
+         
         </div>
        
           </div>
