--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -19,7 +19,7 @@
 		
           <div class="col-lg-5">
             
-<h2 class="heading heading-xl strong-600 text-normal line-height-1_2 mt-3 mb-3">Scale And Secure Your Business</h2>
+<h2 class="heading heading-xl strong-600 text-normal line-height-1_2 mt-5 mb-3">Scale And Secure Your Business</h2>
             <p class="lead mt-4 mb-5">
               <span class="text-primary">
                 <strong class="u-text-animation u-text-animation--typing"></strong>
@@ -28,22 +28,10 @@
             </p>
 
             <div class="d-flex align-items-center flex-wrap">
-              <a class="btn btn-soft-primary btn-wide transition-3d-hover" href="../pages/login-simple.html">Get Started</a>
+              <a class="btn btn-styled btn-soft-default btn-circle" href="/contact">Connect With Sales</a>
 
               <!-- Fancybox -->
-              <a class="js-fancybox media align-items-center u-media-player ml-3" href="javascript:;"
-                 data-src="//vimeo.com/167434033"
-                 data-speed="700"
-                 data-animate-in="zoomIn"
-                 data-animate-out="zoomOut"
-                 data-caption="Scale And Secure Your Business">
-                <span class="u-media-player__icon u-media-player__icon--success mr-3">
-                  <span class="fas fa-play u-media-player__icon-inner"></span>
-                </span>
-                <span class="media-body">
-                  Play video
-                </span>
-              </a>
+              <a class="btn btn-styled btn-soft-success btn-circle ml-3" href="/signup">Get Started</a>
               <!-- End Fancybox -->
             </div>
 		  
