--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
- <nav class="navbar navbar-expand-lg navbar-transparent navbar-inverse bg-dark fixed-top" id="mainNav">
+ 
+        <!-- Header-->
+        <header class="header header-transparent">
+<nav class="navbar navbar-expand-lg navbar-transparent navbar-inverse bg-dark fixed-top" id="mainNav">
         <div class="container container-lg navbar-container">
                 
           <a class="navbar-brand" href="{{ site.baseurl }}/">
@@ -14,7 +17,7 @@
                 </button>
             </div>
 
-           <div class="collapse navbar-collapse align-items-center justify-content-end pl-2" id="navbar_main">
+           <div class="collapse navbar-collapse align-items-center justify-content-end pl-2 inner-navigation collapse" id="navbar_main">
     <!-- Navbar search - For small resolutions -->
     <div class="navbar-search-widget b-xs-bottom py-3 d-lg-none d-none">
         <form class="" role="form">
@@ -28,6 +31,8 @@
     </div>
 
     <!-- Navbar links -->
+            
+                    <div class="inner-nav">
     <ul class="navbar-nav">
 
 <li class="nav-item dropdown-md megamenu">
@@ -35,7 +40,7 @@
              Why Us?
             </a>
 
-            <div class="dropdown-menu ml-lg-1" style="width:600px;left:6%!;">
+            <div class="dropdown-menu ml-lg-1" style="width:600px;left:6%;">
                 <div id="features-dropdown" class="mega-dropdown-menu justify-content-around col-sm-12 row-no-padding">
                  <div class="row">
                                             
@@ -440,6 +445,7 @@
         </li>     
  </ul>
             
+            
    <ul class="navbar-nav ml-lg-auto d-none d-lg-inline-block">
      <li class="nav-item-icon">
       <a href="javascript:void(0);" class="nav-link" target="_blank" data-toggle="tooltip" data-original-title="+18005666003">
@@ -448,6 +454,7 @@
      </li>
     </ul>
  
+</div>
 </div>
 
 <div class="pl-4 d-none d-lg-inline-block">
@@ -462,6 +469,7 @@
         </div>
     </nav>
 
+</header>
 
 <header class="site-header hidden" style="display:none;">
 
