--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -28,10 +28,10 @@
             </p>
 
             <div class="d-flex align-items-center flex-wrap">
-              <a class="btn btn-styled btn-soft-default btn-circle" href="/contact">Connect With Sales</a>
+              <a class="btn btn-styled btn-white btn-circle" href="/contact">Connect With Sales</a>
 
               <!-- Fancybox -->
-              <a class="btn btn-styled btn-soft-success btn-circle ml-3" href="/signup">Get Started</a>
+              <a class="btn btn-styled btn-success btn-circle ml-5" href="/signup">Get Started</a>
               <!-- End Fancybox -->
             </div>
 		  
