--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
                 </button>
             </div>
 
-           <div class="collapse navbar-collapse align-items-center justify-content-end pl-2 inner-navigation collapse" id="navbar_main">
+<div class="collapse navbar-collapse align-items-center justify-content-end pl-2 inner-navigation collapse" id="navbar_main">
     <!-- Navbar search - For small resolutions -->
     <div class="navbar-search-widget b-xs-bottom py-3 d-lg-none d-none">
         <form class="" role="form">
@@ -31,9 +31,7 @@
     </div>
 
     <!-- Navbar links -->
-            
-                    <div class="inner-nav">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav inner-nav">
 
 <li class="nav-item dropdown-md megamenu">
             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -455,8 +453,6 @@
     </ul>
  
 </div>
-</div>
-
 <div class="pl-4 d-none d-lg-inline-block">
      <a href="#" class="btn btn-styled btn-icon-right btn-sm btn-outline-light text-uppercase btn-circle mr-2" target="_blank">
        Login 
