--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
- <footer id="footer" class="footer">
+ 
+
+<footer id="footer" class="footer">
     <div class="footer-top">
         <div class="container container-lg">
             <div class="row cols-xs-space cols-sm-space cols-md-space mt-4">
@@ -188,7 +190,7 @@
         </div>
     </div>
 </footer>
-
+</div><!-- END: wrapper -->
 
                 </div>
             </div>
