--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -1,25 +1,23 @@
 <!-- Hero Section -->
-<section class="js-container background-image-holder parallax fullscreen" data-background="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554427476/img/1920x1080/img20.jpg">
+<section class="js-container background-image-holder">
  <div class="swiper-container" data-swiper-autoplay="true" data-swiper-effect="slide" data-swiper-items="0" data-swiper-space-between="0">
-	<div class="swiper-wrapper">
-   <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
+   <div class="swiper-wrapper">
+      <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
                                 <!-- Slide -->
-                                <div class="swiper-slide" data-swiper-autoplay="8000">
-                                    <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 120px;">
+                   <div class="swiper-slide" data-swiper-autoplay="8000">
+                       <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 120px;">
                                      
-					    <div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;">
+				<div style="position: absolute; z-index: -1; top: 0px; left: 0px; bottom: 0px; right: 0px; overflow: hidden; background-size: cover; background-color: transparent; background-repeat: no-repeat; background-position: 0% 0%;">
                                        <video autoplay="true" loop="" style="margin: auto; position: absolute; z-index: -1; top: 0%; left: 0%; transform: translate(0%, 0%); visibility: hidden; opacity: 0; width: auto; height: 602px;">
                                          <source src="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" type="video/mp4">
                                          <source src="" type="video/webm">
                                       <source src="" type="video/ogg"></video>
-                                      </div> 
+                                  </div> 
 					    
-                                        <span class="mask mask-base-1--style-2 alpha-6"></span>
-                 <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
-                                              <!-- Content -->
 	<span class="mask mask-base-1--style-2 alpha-6"></span>
+					    
    <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
-                                              <!-- Content -->
+        <!-- Content -->
 <div class="col px-0 mt-5">
         <div class="row w-100">
 		
@@ -47,10 +45,10 @@
         <div class="col-lg-9 col-xl-7 d-none d-lg-block position-absolute top-0 right-0 pr-0" style="margin-top: 105.6px;">
          
         </div>
-       
+         </div>
           </div>
         <!-- End intro -->
-  </div>
+
                           
 	    </div> 
 </div> 
