--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -16,9 +16,9 @@
 					    
 	<span class="mask mask-base-1--style-2 alpha-6"></span>
 					    
-   <div class="container container-lg slice--offset-top d-flex align-items-center mt-4">
+   <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
         <!-- Content -->
-<div class="col px-0 mt-3">
+<div class="col px-0 mt-5">
         <div class="row w-100">
 		
           <div class="col-lg-5">
@@ -42,10 +42,12 @@
           </div>
         <!-- End Content -->
    <!-- SVG Background -->
-        <div class="col-lg-9 col-xl-7 d-none d-lg-block position-absolute top-0 right-0 pr-0" style="margin-top: 85.6px;">
+        <div class="col-lg-9 col-xl-7 d-none d-lg-block position-absolute">
          
         </div>
+		
          </div>
+	
           </div>
         <!-- End intro -->
 	   
