--- a/_includes/jumbrotron-landing.html
+++ b/_includes/jumbrotron-landing.html
@@ -1,9 +1,78 @@
-<!-- Hero Section -->
-<section class="js-container background-image-holder">
+<div id="SVGHero" class="svg-preloader position-relative bg-white overflow-hidden">
+      <div class="container position-relative z-index-2 space-top-2 space-bottom-3 space-top-md-4">
+        <div class="row align-items-lg-center">
+          <div class="col-lg-5 mb-11 mb-lg-0">
+            <div class="mb-6">
+              <h1 class="text-white font-weight-semi-bold mb-3">
+                The
+                <span class="text-indigo">
+                  <strong class="u-text-animation u-text-animation--typing"></strong>
+                </span>
+                <br>
+               Scale And Secure Your Business
+              </h1>
+              <p class="text-white-70">Connect with more customers and increase your bottom line with the Open Commerce platform that connects all major payment processors, credit, gift and debit cards, Echecks, and popular digital wallets like Apple Pay and Google Pay in a single, seamless integration.</p>
+            </div>
+
+            <a class="btn btn-white btn-wide btn-pill text-primary shadow-soft transition-3d-hover mb-2 mb-sm-0 mr-4" href="{{ site.baseurl }}/contact/sales/">Contact Sales</a>
+            <a class="btn btn-indigo btn-wide btn-pill transition-3d-hover mb-2 mb-sm-0" href="https://id.elektropay.com/signup">Get Started</a>
+        
+          </div>
+
+          <div class="col-lg-7">
+            <div class="position-relative">
+              <!-- SVG Laptop Mockup -->
+              <figure class="ie-devices-v4-laptop mb-3 mb-sm-0">
+                <img class="js-svg-injector" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1554265683/svg/components/laptop.svg" alt=""
+                     data-img-paths='[
+                       {"targetId": "#SVGlaptopImg1", "newPath": "https://res.cloudinary.com/lmj6rf6tz/image/upload/v1562819846/img/img3.jpg"}
+                     ]'
+                     data-parent="#SVGHero">
+              </figure>
+		    
+              <div class="position-sm-absolute bottom-0 right-0 max-width-40 ml-auto mb-sm-n5">
+                <div class="card border-0 bg-primary shadow-primary-lg rounded p-5">
+                  <h2 class="h5 text-white font-weight-semi-bold mb-3">Integrate<br>Easy</h2>
+
+                  <p class="text-info">Elektropay lets you secure auth and billing in one place.</p>
+
+                  <div class="media align-items-center">
+                    <div class="u-sm-avatar u-sm-avatar--bordered rounded-circle mr-2">
+                      <img class="img-fluid rounded-circle" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1562819846/img/img6.jpg" alt="Image Description">
+                    </div>
+                    <div class="media-body">
+                      <h3 class="font-size-1 text-white font-weight-medium mb-0">Richard St-Joseph</h3>
+                      <small class="d-block text-light font-weight-light">Fintelligence LLC</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="gradient-overlay-half-primary-v3 svg-divider-polygon position-absolute top-0 right-0 bottom-0 left-0">
+        <figure class="ie-circles-hero">
+          <img class="js-svg-injector d-none d-lg-block" src="https://res.cloudinary.com/lmj6rf6tz/image/upload/v1562819678/svg/components/circles.svg" alt=""
+               data-parent="#SVGHero">
+        </figure>
+      </div>
+      
+    </div>
+
+
+
+
+
+
+
+
+<!-- <section class="js-container background-image-holder">
  <div class="swiper-container" data-swiper-autoplay="true" data-swiper-effect="slide" data-swiper-items="0" data-swiper-space-between="0">
    <div class="swiper-wrapper">
       
-                                <!-- Slide -->
+                             
                    <div class="swiper-slide" data-swiper-autoplay="8000">
                        <div class="holder-item holder-item-light has-bg-cover bg-size-cover slice-video d-flex align-items-center" data-vide-bg="{{ site.baseurl }}/assets/videos/everpay-intro.mp4" data-vide-options="loop: true, muted: false, position: 0% 0%" style="padding-bottom: 120px;">
                                      
@@ -17,7 +86,7 @@
 	<span class="mask mask-base-1--style-2 alpha-6"></span>
 					    
    <div class="container container-lg slice--offset-top d-flex align-items-center mt-5">
-        <!-- Content -->
+       
 <div class="col px-0 mt-1">
         <div class="row w-100">
 		
@@ -34,14 +103,11 @@
             <div class="d-flex align-items-center flex-wrap">
               <a class="btn btn-styled btn-white btn-circle" href="{{ site.baseurl }}/contact">Connect With Sales</a>
 
-              <!-- Fancybox -->
               <a class="btn btn-styled btn-success btn-circle ml-5" href="{{ site.baseurl }}/signup">Get Started</a>
-              <!-- End Fancybox -->
+     
             </div>
 		  
           </div>
-        <!-- End Content -->
-   <!-- SVG Background -->
         <div class="col-lg-9 col-xl-7 d-none d-lg-block position-absolute">
          
         </div>
@@ -49,11 +115,10 @@
          </div>
 	
           </div>
-        <!-- End intro -->
 	   
 </div> 
       </div>
 	   
 	   </div>
                 </div>
-                    </section>
+                    </section> -->
